feed-back point

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 
 
   <div id="root"></div>
-  <div id='token' style="display:none;">42046_fd6baa39294F</div>
+  <div id='token' style="display:none;">333_d2aebb50EBA8</div>
 
   <div class="modal fade" id="chat-modal" role="dialog" tabindex="-1" aria-labelledby="demo-default-modal" aria-hidden="true">
   <div class="modal-dialog">
@@ -83,7 +83,7 @@
 </div>
    <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
    <script src="%PUBLIC_URL%/js/nifty.min.js"></script>
-   <script src="%PUBLIC_URL%/js/uimodals.js"></script>
+   <script src="%PUBLIC_URL%/js/ui-modals.js"></script>
    <script>
     $("#mjp-start-chat").click(function(){
       var param ={
@@ -97,6 +97,6 @@
       });
     })
    </script>
-   <div id="infoURL" style="display:none">https://www.myjipiao.co.nz/info?type={0}&lang={1}&device={2}</div>
+   <div id="infoURL" style="display:none">https://www.myjipiao.com.au/info?type={0}&lang={1}&device={2}</div>
 </body>
 </html>
